--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,8 +1,8 @@
 html,
 body,
 #root {
-  height: 100%;
   background-color: rgba(255, 255, 239);
+  height: 100%;
 }
 
 body {
@@ -12,8 +12,8 @@ body {
 body p,
 label,
 legend {
-  font-size: 100%;
   color: darkolivegreen;
+  font-size: 100%;
 }
 
 body,
@@ -27,15 +27,15 @@ main {
 
 h2 {
   color: darkolivegreen;
-  padding-bottom: 15px;
   font-weight: 600;
   margin-bottom: 0px;
+  padding-bottom: 15px;
 }
 
 h3 {
   color: darkolivegreen;
-  padding-bottom: 15px;
   margin-bottom: 0px;
+  padding-bottom: 15px;
 }
 
 span {
@@ -46,33 +46,30 @@ span {
 
 input,
 select {
-  padding-left: 7px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  padding-right: 0px;
-  border: 1px solid rgba(85, 107, 47, 0.15);
-  border-radius: 4px;
-  color: darkolivegreen;
   background-color: rgba(255, 255, 224, 0.2);
+  border-radius: 4px;
+  border: 1px solid rgba(85, 107, 47, 0.15);
+  color: darkolivegreen;
   margin: auto;
+  padding: 3px 0px 3px 7px;
 }
 
 select:not([type='checkbox']) {
-  width: 204px;
   height: 32px;
+  width: 204px;
 }
 
 input[type='radio']:checked:after {
-  width: 15px;
-  height: 15px;
-  border-radius: 15px;
-  top: -2px;
-  left: -1px;
-  position: relative;
   background-color: darkolivegreen;
+  border-radius: 15px;
+  border: 2px solid moccasin;
   content: '';
   display: inline-block;
-  border: 2px solid moccasin;
+  height: 15px;
+  left: -1px;
+  position: relative;
+  top: -2px;
+  width: 15px;
 }
 
 input:hover,
@@ -87,8 +84,8 @@ select:focus-visible {
 }
 
 input:-webkit-autofill {
-  -webkit-text-fill-color: darkolivegreen !important;
   -webkit-box-shadow: 0 0 0 30px rgb(255, 255, 236) inset !important;
+  -webkit-text-fill-color: darkolivegreen !important;
 }
 
 input:-webkit-autofill:hover,
@@ -122,8 +119,8 @@ input:-webkit-autofill:focus {
 .left-aligned-input label,
 .left-aligned-input input {
   display: block;
-  text-align: left;
   margin-bottom: 3px;
+  text-align: left;
 }
 
 .error-class {
@@ -134,8 +131,8 @@ input:-webkit-autofill:focus {
 }
 
 .required:after {
-  content: ' *';
   color: red;
+  content: ' *';
 }
 
 ::placeholder {
