--- a/src/assets/css/GreenTable.css
+++ b/src/assets/css/GreenTable.css
@@ -1,24 +1,24 @@
 table {
-  font-size: min(1vw, 15px);
-  table-layout:fixed;
-  width: 100%;
   border-collapse: collapse;
   border-style: hidden;
+  font-size: min(1vw, 15px);
+  table-layout: fixed;
+  width: 100%;
 }
 
 table td,
 table th {
   border: 3px solid darkolivegreen;
-  padding: 8px;
   margin: 3px;
+  padding: 8px;
 }
 
 table th {
   background-color: rgba(85, 107, 47, 0.8);
   color: lightyellow;
-  padding-top: 12px;
-  padding-bottom: 12px;
   font-weight: 500;
+  padding-bottom: 12px;
+  padding-top: 12px;
 }
 
 table td,
@@ -41,8 +41,8 @@ input::-webkit-inner-spin-button {
 }
 
 #goto-input {
-  max-width: 50px;
   margin-right: 7px;
+  max-width: 50px;
 }
 
 #rows-per-page-span {
@@ -50,28 +50,28 @@ input::-webkit-inner-spin-button {
 }
 
 .col-search-field {
-  width:90%;
+  width: 90%;
 }
 
 .dropdown-content {
-  display: none;
   background-color: lightyellow;
-  width: 50px;
   box-shadow: 0px 8px 16px 0px rgba(85, 107, 47, 0.8);
-  text-align: center;
+  display: none;
   float: right;
+  text-align: center;
+  width: 50px;
 }
 
 .dropdown-content a {
+  color: darkolivegreen;
+  cursor: default;
   display: block;
   padding: 2px;
   text-decoration: none;
-  color: darkolivegreen;
-  cursor: default;
 }
 
 .dropdown-content a:hover {
-  background-color: moccasin
+  background-color: moccasin;
 }
 
 .show {
