--- a/src/assets/css/TitleBar.css
+++ b/src/assets/css/TitleBar.css
@@ -7,15 +7,12 @@ header p {
   background-color: moccasin;
 }
 
-.title {
-  font-size: 3rem;
+.logo {
+  box-sizing: content-box;
+  height: 6rem;
+  width: 6rem;
 }
 
-.logo {
-  border-color: moccasin;
-  border-radius: 0.4rem;
-  border-style: solid;
-  border-width: 2px;
-  height: 7rem;
-  width: 7rem;
+.user-context {
+  color: moccasin;
 }
